<resources>
    <string name="Add_Mobile_no">Add Mobile No</string>
    <string name="Event_Reg_Details">Event Register Details</string>
    <string name="Register">Register</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="app_name">Women Safety</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_for_events">Apply For Events</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dob">Date of Birth</string>
    <string name="error_email_exists">Phone no Already Exists</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong UserName or Password</string>
    <string name="female">Female</string>
    <string name="firstName">FirstName</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="gender">Gender</string>
    <string name="google_maps_key">AIzaSyC5Il3ps3zaB7Rm9siRNb1Xt_aJXmYmABU</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="institution_Name">Institution Name</string>
    <string name="lastName">LastName</string>
    <string name="location">Location</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="male">Male</string>
    <string name="mobileNo">Mobile Number</string>
    <string name="mobile_1">First Mobile No</string>
    <string name="mobile_2">Second Mobile No</string>
    <string name="mobile_3">Thrid Mobile No</string>
    <string name="mobile_4">Fourth Mobile No</string>
    <string name="mobile_5">First Mobile No</string>
    <string name="mobile_No">Mobile No</string>
    <string name="msg_all_field_mandatory">All fields are mandatory</string>
    <string name="msg_invalid_username_password">Invalid username or password</string>
    <string name="msg_logout_question">Are you sure want to logout from app?</string>
    <string name="msg_mobile_number_length">The mobile number length should be 10 characters</string>
    <string name="msg_password_length">The password length should be 5 – 15 characters</string>
    <string name="msg_username_already_register">Username is already registered</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="regNo">Register No</string>
    <string name="register">Register</string>
    <string name="search_menu_title">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="student_details">Student Details</string>
    <string name="submit">Submit</string>
    <string name="success_message">Registration Successful</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="text_accounts">All Accounts</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="text_forget_password">Forget Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="username">UserName</string>
    <string name="view_event_details">View Event Details</string>
    <string name="yes">Yes</string>
</resources>
